--- a/pom.xml
+++ b/pom.xml
@@ -1,21 +1,12 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>Cucumber_Serinity_Demo</groupId>
-  <artifactId>Cucumber_Serenity_Demo</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  <name>BDD-demo</name>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>Cucumber_Serinity_Demo</groupId>
+	<artifactId>Cucumber_Serenity_Demo</artifactId>
+	<version>0.0.1-SNAPSHOT</version>
+
+	<name>BDD-demo</name>
 	<url>http://maven.apache.org</url>
 
 	<properties>
@@ -75,8 +66,8 @@
 						<reuseForks>true</reuseForks>
 					</includes>
 					<parallel>classes</parallel>
-                    <threadCount>4</threadCount>
-                    <perCoreThreadCount>true</perCoreThreadCount>
+					<threadCount>4</threadCount>
+					<perCoreThreadCount>true</perCoreThreadCount>
 				</configuration>
 				<executions>
 					<execution>
@@ -88,20 +79,9 @@
 				</executions>
 
 			</plugin>
-			<!-- <plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.22.0</version>
-				<configuration>
-					<includes>
-						        
-						<testFailureIgnore>false</testFailureIgnore>
-					</includes>
-
-					<skip>false</skip>
-				</configuration>
-
-			</plugin> -->
+			<!-- <plugin> <groupId>org.apache.maven.plugins</groupId> <artifactId>maven-surefire-plugin</artifactId> 
+				<version>2.22.0</version> <configuration> <includes>          <testFailureIgnore>false</testFailureIgnore> 
+				</includes> <skip>false</skip> </configuration> </plugin> -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
@@ -128,13 +108,13 @@
 			</plugin>
 		</plugins>
 	</build>
-  
-  
-  
-  
-  
-  
-  
-  
-  
+
+
+
+
+
+
+
+
+
 </project>
